--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ header {
 }
 .hero {
   width: 85vw;
-  min-height: 15vh;
-  margin: 5px auto;
+  padding: 20px 0;
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr;
 }
@@ -102,7 +102,7 @@ header {
 .message {
   font-family: "Dancing Script", cursive;
   background-color: var(--light-coral);
-  color: var(--coral);
+  color: #f7d9d9;
   margin-left: 5px;
   text-align: center;
   border-radius: 3px 15px 15px 3px;
@@ -111,8 +111,8 @@ header {
   justify-self: center;
   align-self: flex-end;
   font-weight: lighter;
-  /* box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px; */
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
 #pop-1 {
   grid-column: 1 / span 1;
@@ -132,6 +132,40 @@ header {
 .light-mode .mode {
   background-color: var(--background);
   color: #f7d9d9;
+}
+.light-mode .message,
+.light-mode h2 {
+  color: var(--coral);
+}
+
+h2 {
+  color: #f7d9d9;
+  text-align: center;
+  padding: 5px;
+}
+#carousel {
+  width: 95vw;
+  margin: 2em auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.slides {
+  position: relative;
+}
+.jw_image {
+  height: 300px;
+  width: 350px;
+  padding: 0.5em;
+}
+.dots {
+  width: 100%;
+  padding: 20px 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
 @media only screen and (min-width: 768px) {
   .hero {
