--- a/style.css
+++ b/style.css
@@ -162,7 +162,8 @@ h2 {
 .jw_image {
   height: 300px;
   width: 360px;
-  padding: 0.5em;
+  border: 3px solid var(--coral);
+  border-radius: 5px;
 }
 .slide {
   display: none;
@@ -189,6 +190,34 @@ h2 {
 }
 .dot--selected {
   background: white;
+  transform: scale(1.1);
+}
+#upload_img {
+  margin-top: 15px;
+}
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 25px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(255, 127, 80, 0.128);
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover,
+.next:hover {
+  background-color: var(--coral);
 }
 @media only screen and (min-width: 768px) {
   .hero {
@@ -207,7 +236,6 @@ h2 {
   .jw_image {
     height: 400px;
     width: 700px;
-    padding: 0.5em;
   }
 }
 @media only screen and (max-width: 1320px) {
