--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Laila:wght@300&display=swap");
 
 * {
   margin: 0;
@@ -30,7 +31,7 @@ header {
   /* width: 100vw; */
   height: 60px;
   display: flex;
-  background: var(--light-coral);
+  background: var(--grey);
   align-items: center;
   justify-content: space-between;
   padding: 0 50px;
@@ -83,7 +84,7 @@ header {
 .container {
   width: 95vw;
   padding: 20px 0;
-  margin: auto;
+  margin: 35px auto;
 }
 .hero {
   display: grid;
@@ -110,14 +111,17 @@ header {
   color: var(--light-tan);
 }
 .message {
-  font-family: "Dancing Script", cursive;
+  /* font-family: "Dancing Script", cursive; */
+  /* font-family: "Laila", sans-serif; */
+
   background-color: var(--light-coral);
   color: #f7d9d9;
   margin-left: 5px;
   text-align: center;
   border-radius: 3px 15px 15px 3px;
-  padding: 5px;
-  font-size: clamp(1.5em, 3vw, 2.5rem);
+  padding: 7px;
+  /* font-size: clamp(1.5em, 3vw, 2.5rem); */
+  font-size: clamp(1em, 2.5vw, 2rem);
   justify-self: center;
   align-self: flex-end;
   font-weight: lighter;
@@ -139,6 +143,9 @@ header {
 .light-mode {
   background-color: #f7d9d9;
 }
+.light-mode header {
+  background-color: #f0bcbc;
+}
 .light-mode .mode {
   background-color: var(--background);
   color: #f7d9d9;
@@ -148,11 +155,6 @@ header {
   color: var(--coral);
 }
 
-h2 {
-  color: #f7d9d9;
-  text-align: center;
-  padding: 5px;
-}
 #carousel {
   display: flex;
   flex-direction: column;
@@ -247,7 +249,75 @@ h2 {
   border: 0;
   cursor: pointer;
 }
+/* about me section */
+.about {
+  max-width: 90vw;
+  min-height: 16em;
+  margin: 2em auto 0;
+  color: #eddada;
+}
+.text-me {
+  padding: 10px;
+}
+.about-me_btns {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding-left: 0;
+}
+.about-me_btn {
+  min-height: 2em;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 0.5em;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+  background-color: var(--coral);
+  color: var(--grey);
+  transition: background-color 0.25s;
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
+}
+.btn:hover {
+  background-color: var(--purple);
+  transition: background-color 0.25s;
+  color: #f0bcbc;
+}
 
+.about-me_btn-active {
+  background-color: var(--grey);
+  color: #f0bcbc;
+  pointer-events: none;
+}
+
+.me {
+  display: none;
+  padding: 1em;
+  text-align: start;
+  /* box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15); */
+}
+
+.me-active {
+  display: block;
+  background-color: var(--grey);
+}
+
+h1 {
+  color: #f7d9d9;
+  text-align: center;
+  padding: 15px;
+  font-size: 2em;
+  font-weight: bolder;
+}
+h2 {
+  color: #f7d9d9;
+  text-align: center;
+  padding: 5px;
+}
 @media only screen and (min-width: 768px) {
   .hero {
     width: 95vw;
