--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
   --light-coral: #e9647820;
 }
 body {
-  background-color: var(--background);
+  background: linear-gradient(to right, var(--background), #021057);
+  /* background-color: var(--background); */
   font-family: "Quicksand", sans-serif;
   min-height: 100vh;
   margin: 0 auto 100px;
@@ -27,8 +28,8 @@ body {
 }
 header {
   top: 0;
-  position: sticky;
-  /* width: 100vw; */
+  position: fixed;
+  width: 100vw;
   height: 60px;
   display: flex;
   background: var(--grey);
@@ -36,6 +37,7 @@ header {
   justify-content: space-between;
   padding: 0 50px;
   z-index: 100;
+  margin-bottom: 50px;
 }
 
 .logo {
@@ -84,62 +86,74 @@ header {
 .container {
   width: 95vw;
   padding: 20px 0;
-  margin: 35px auto;
+  margin: 50px auto;
+}
+#hero_section {
+  padding-top: 120px;
 }
 .hero {
   display: grid;
-  grid-template-columns: 1fr, 1fr, 1fr;
+  grid-template-columns: 1fr, 0.5fr, 3fr;
 }
-
-.first_name {
-  grid-column: 2 / span 2;
-  grid-row: 1 / span 1;
-  font-family: "Work Sans", Sans-Serif;
-  font-size: clamp(1.5em, 12vw, 6rem);
-  color: var(--light-tan);
-  justify-self: flex-start;
-  align-self: flex-end;
-}
+.pre,
+.first_name,
 .last_name {
   font-family: "Work Sans", Sans-Serif;
   font-size: clamp(1.5em, 12vw, 6rem);
-  grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
-  justify-self: flex-start;
-  align-self: flex-start;
-  border-bottom: 3px solid var(--coral);
   color: var(--light-tan);
+  justify-self: flex-start;
+  align-self: center;
 }
-.message {
-  /* font-family: "Dancing Script", cursive; */
-  /* font-family: "Laila", sans-serif; */
+.pre {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+}
+.first_name {
+  grid-column: 2 / span 2;
+  grid-row: 2 / span 1;
+}
+.last_name {
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
+  border-bottom: 3px solid var(--coral);
+}
 
+.good,
+.message,
+.greeting,
+.fac {
   background-color: var(--light-coral);
-  color: #f7d9d9;
-  margin-left: 5px;
-  text-align: center;
-  border-radius: 3px 15px 15px 3px;
+  margin: 0 10px;
+  color: var(--coral);
+  border-radius: 3px;
   padding: 7px;
+
   /* font-size: clamp(1.5em, 3vw, 2.5rem); */
-  font-size: clamp(1em, 2.5vw, 2rem);
-  justify-self: center;
-  align-self: flex-end;
+  font-size: clamp(1em, 1.5vw, 2rem);
   font-weight: lighter;
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
     0 17px 17px 0 rgba(0, 0, 0, 0.15);
-}
-#pop-1 {
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 1;
-  justify-self: flex-start;
-  align-self: flex-start;
-}
-#pop-2 {
-  grid-column: 3 / span 1;
-  grid-row: 2 / span 1;
-  justify-self: center;
+  justify-self: flex-end;
   align-self: center;
 }
+.message {
+  grid-column: 3 / span 1;
+  grid-row: 3 / span 1;
+  justify-self: flex-end;
+}
+.greeting {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+.good {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+.fac {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+}
+
 .light-mode {
   background-color: #f7d9d9;
 }
@@ -154,7 +168,9 @@ header {
 .light-mode h2 {
   color: var(--coral);
 }
-
+.light-mode .me-active {
+  background-color: var(--coral);
+}
 #carousel {
   display: flex;
   flex-direction: column;
@@ -208,7 +224,6 @@ header {
   display: flex;
   width: 70vw;
   margin-top: 15px;
-
   align-items: center;
   justify-content: center;
 }
@@ -320,21 +335,23 @@ h2 {
 }
 @media only screen and (min-width: 768px) {
   .hero {
-    width: 95vw;
+    width: 80vw;
+    margin: auto;
   }
-  #pop-1 {
-    justify-self: flex-end;
-    align-self: center;
-  }
-  #pop-2 {
-    grid-column: 2 / span 2;
-    grid-row: 2 / span 1;
-    justify-self: center;
-    align-self: center;
-  }
+
   .jw_image {
     height: 400px;
     width: 700px;
+  }
+  .message {
+    grid-column: 2 / span 2;
+    justify-self: center;
+  }
+  .greeting,
+  .fac,
+  .good {
+    min-width: 120px;
+    text-align: center;
   }
 }
 @media only screen and (max-width: 1320px) {
