--- a/style.css
+++ b/style.css
@@ -11,20 +11,20 @@
 }
 
 :root {
-  --grey: #3f3351;
-  --background: #16213e;
-  --coral: #e96479;
-  --light-tan: #9b6a6c;
-  --light-coral: #e9647820;
+  --grey: #3d354a;
+  --pineapple: #c9b203;
+  --light-pineapple: #efe69e;
+  --cream: #fcecdd;
+  --light-grey: #b6a8cb;
 }
 body {
-  background: linear-gradient(to right, var(--background), #021057);
-  /* background-color: var(--background); */
+  background-color: var(--pineapple);
   font-family: "Quicksand", sans-serif;
   min-height: 100vh;
   margin: 0 auto 100px;
   overflow-x: hidden;
   max-width: 100%;
+  color: var(--cream);
 }
 header {
   top: 0;
@@ -44,8 +44,8 @@ header {
   font-weight: bold;
   font-family: "Work Sans", Sans-Serif;
   font-size: 2em;
-  background-color: var(--coral);
-  color: var(--background);
+  background-color: var(--pineapple);
+  color: var(--grey);
   padding: 0 6px;
   border-radius: 3px 15px 15px 3px;
 }
@@ -59,14 +59,14 @@ header {
   display: block;
   font-size: 1.2em;
   font-weight: bold;
-  color: var(--coral);
+  color: var(--pineapple);
   padding: 10px 25px;
   border-radius: 50px;
 }
 .mode:hover,
 .nav-bar ul li a:hover {
-  background-color: var(--coral);
-  color: var(--background);
+  background-color: var(--pineapple);
+  color: var(--grey);
 }
 .nav-bar.active {
   height: 230px;
@@ -76,8 +76,8 @@ header {
 }
 .mode {
   font-size: 20px;
-  background-color: #f7d9d9;
-  color: var(--coral);
+  background-color: var(--light-pineapple);
+  color: var(--grey);
   padding: 10px 25px;
   border-radius: 25px;
   border: 0;
@@ -89,7 +89,7 @@ header {
   margin: 50px auto;
 }
 #hero_section {
-  padding-top: 120px;
+  padding-top: 100px;
 }
 .hero {
   display: grid;
@@ -100,7 +100,7 @@ header {
 .last_name {
   font-family: "Work Sans", Sans-Serif;
   font-size: clamp(1.5em, 12vw, 6rem);
-  color: var(--light-tan);
+  color: var(--cream);
   justify-self: flex-start;
   align-self: center;
 }
@@ -115,26 +115,23 @@ header {
 .last_name {
   grid-column: 2 / span 1;
   grid-row: 3 / span 1;
-  border-bottom: 3px solid var(--coral);
+  border-bottom: solid var(--grey);
 }
 
-.good,
 .message,
-.greeting,
-.fac {
-  background-color: var(--light-coral);
+.greeting {
+  background-color: var(--grey);
   margin: 0 10px;
-  color: var(--coral);
-  border-radius: 3px;
+  font-weight: bolder;
+  color: var(--cream);
+  border-radius: 13px;
   padding: 7px;
-
   /* font-size: clamp(1.5em, 3vw, 2.5rem); */
   font-size: clamp(1em, 1.5vw, 2rem);
-  font-weight: lighter;
-  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
-    0 17px 17px 0 rgba(0, 0, 0, 0.15);
   justify-self: flex-end;
   align-self: center;
+  justify-content: space-between;
+  text-align: center;
 }
 .message {
   grid-column: 3 / span 1;
@@ -143,34 +140,50 @@ header {
 }
 .greeting {
   grid-column: 1 / span 1;
-  grid-row: 2 / span 1;
-}
-.good {
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 1;
-}
-.fac {
-  grid-column: 1 / span 1;
-  grid-row: 3 / span 1;
+  grid-row: 1 / span 3;
 }
 
 .light-mode {
-  background-color: #f7d9d9;
+  background-color: var(--light-pineapple);
 }
 .light-mode header {
-  background-color: #f0bcbc;
+  background-color: var(--light-grey);
 }
 .light-mode .mode {
-  background-color: var(--background);
-  color: #f7d9d9;
+  background-color: var(--grey);
+  color: var(--pineapple);
+}
+.light-mode .nav-bar ul li a {
+  color: var(--grey);
+}
+.light-mode .mode:hover,
+.light-mode .nav-bar ul li a:hover,
+.light-mode .logo,
+.light-mode .pre,
+.light-mode .first_name,
+.light-mode .last_name {
+  background-color: var(--light-pineapple);
+  color: var(--grey);
 }
 .light-mode .message,
-.light-mode h2 {
-  color: var(--coral);
+.light-mode .fac,
+.light-mode .good,
+.light-mode .greeting {
+  background-color: var(--light-grey);
+  color: var(--grey);
 }
-.light-mode .me-active {
-  background-color: var(--coral);
+.light-mode .last_name {
+  border-bottom: 3px solid var(--light-grey);
 }
+.light-mode .me-active,
+.light-mode .about-me_btn-active {
+  background-color: var(--light-grey);
+  color: var(--grey);
+}
+.light-mode .about-me_btn:hover {
+  background-color: var(--light-pineapple);
+}
+/* light mode ends */
 #carousel {
   display: flex;
   flex-direction: column;
@@ -185,7 +198,7 @@ header {
   height: 300px;
   width: 350px;
   max-width: 90vw;
-  border: 3px solid var(--coral);
+  border: 3px solid var(--pineapple);
   border-radius: 5px;
   overflow: hidden;
 }
@@ -253,11 +266,11 @@ header {
 }
 .prev:hover,
 .next:hover {
-  background-color: var(--coral);
+  background-color: var(--pineapple);
 }
 .circle {
-  background-color: #f7d9d9;
-  color: var(--coral);
+  background-color: var(--cream);
+  color: var(--cream);
   padding: 10px;
   margin: 10px;
   border-radius: 30%;
@@ -269,7 +282,7 @@ header {
   max-width: 90vw;
   min-height: 16em;
   margin: 2em auto 0;
-  color: #eddada;
+  color: var(--cream);
 }
 .text-me {
   padding: 10px;
@@ -290,21 +303,20 @@ header {
   width: 100%;
   text-align: center;
   cursor: pointer;
-  background-color: var(--coral);
-  color: var(--grey);
+  background-color: var(--grey);
+  color: var(--cream);
   transition: background-color 0.25s;
-  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
-    0 17px 17px 0 rgba(0, 0, 0, 0.15);
+  border: solid 1px var(--pineapple);
 }
-.btn:hover {
-  background-color: var(--purple);
+.about-me_btn:hover {
+  background-color: var(--pineapple);
   transition: background-color 0.25s;
-  color: #f0bcbc;
+  color: var(--grey);
 }
 
 .about-me_btn-active {
-  background-color: var(--grey);
-  color: #f0bcbc;
+  background-color: var(--light-pineapple);
+  color: var(--grey);
   pointer-events: none;
 }
 
@@ -312,24 +324,25 @@ header {
   display: none;
   padding: 1em;
   text-align: start;
-  /* box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
-    0 17px 17px 0 rgba(0, 0, 0, 0.15); */
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
 
 .me-active {
   display: block;
-  background-color: var(--grey);
+  background-color: var(--light-pineapple);
+  color: var(--grey);
 }
 
 h1 {
-  color: #f7d9d9;
+  color: var(--grey);
   text-align: center;
   padding: 15px;
   font-size: 2em;
   font-weight: bolder;
 }
 h2 {
-  color: #f7d9d9;
+  color: var(--grey);
   text-align: center;
   padding: 5px;
 }
@@ -347,11 +360,8 @@ h2 {
     grid-column: 2 / span 2;
     justify-self: center;
   }
-  .greeting,
-  .fac,
-  .good {
+  .greeting {
     min-width: 120px;
-    text-align: center;
   }
 }
 @media only screen and (max-width: 1320px) {
@@ -372,7 +382,7 @@ h2 {
   .hamburger .line {
     width: 30px;
     height: 3px;
-    background: var(--coral);
+    background: var(--pineapple);
     margin: 6px 0;
   }
   .nav-bar {
@@ -396,5 +406,12 @@ h2 {
     width: fit-content;
     align-items: center;
     justify-content: center;
+  }
+
+  .light-mode .nav-bar {
+    background: var(--light-grey);
+  }
+  .light-mode .hamburger .line {
+    background: var(--grey);
   }
 }
