--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 :root {
   --grey: #3d354a;
   --pineapple: #c9b203;
-  --light-pineapple: #efe69e;
+  --light-pineapple: #ddce9d;
   --cream: #fcecdd;
   --light-grey: #b6a8cb;
 }
@@ -25,6 +25,7 @@ body {
   overflow-x: hidden;
   max-width: 100%;
   color: var(--cream);
+  font: 1.5em;
 }
 header {
   top: 0;
@@ -86,7 +87,7 @@ header {
 .container {
   width: 95vw;
   padding: 20px 0;
-  margin: 50px auto;
+  margin: 30px auto;
 }
 #hero_section {
   padding-top: 100px;
@@ -181,7 +182,7 @@ header {
   color: var(--grey);
 }
 .light-mode .about-me_btn:hover {
-  background-color: var(--light-pineapple);
+  background-color: var(--light-grey);
 }
 /* light mode ends */
 #carousel {
@@ -198,9 +199,11 @@ header {
   height: 300px;
   width: 350px;
   max-width: 90vw;
-  border: 3px solid var(--pineapple);
-  border-radius: 5px;
+  border: 3px solid var(--grey);
+  border-radius: 15px;
   overflow: hidden;
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
 .slide {
   display: none;
@@ -285,7 +288,7 @@ header {
   color: var(--cream);
 }
 .text-me {
-  padding: 10px;
+  padding: 20px;
 }
 .about-me_btns {
   list-style: none;
@@ -306,18 +309,22 @@ header {
   background-color: var(--grey);
   color: var(--cream);
   transition: background-color 0.25s;
-  border: solid 1px var(--pineapple);
+  /* border: solid 1px var(--grey); */
 }
 .about-me_btn:hover {
   background-color: var(--pineapple);
   transition: background-color 0.25s;
   color: var(--grey);
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
 
 .about-me_btn-active {
-  background-color: var(--light-pineapple);
+  background-color: var(--pineapple);
   color: var(--grey);
   pointer-events: none;
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
 
 .me {
@@ -346,6 +353,78 @@ h2 {
   text-align: center;
   padding: 5px;
 }
+
+/* slider */
+
+.london-images {
+  width: 90vw;
+  min-height: 16em;
+  margin: 2em auto;
+  color: var(--grey);
+  display: grid;
+  grid-template-columns: 1fr;
+}
+#description {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+.img1 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+  opacity: 1;
+  width: 320px;
+  overflow: hidden;
+  align-self: center;
+  justify-self: center;
+  border: 3px solid var(--grey);
+  border-radius: 15px;
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
+  margin: 2em auto;
+}
+.img2 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+  opacity: 0;
+  width: 320px;
+  overflow: hidden;
+  align-self: center;
+  justify-self: center;
+  border: 3px solid var(--grey);
+  border-radius: 15px;
+  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
+    0 17px 17px 0 rgba(0, 0, 0, 0.15);
+  margin: 2em auto;
+}
+.slide-div {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+  align-self: center;
+  justify-self: center;
+}
+.slider {
+  appearance: none;
+  margin: auto;
+  width: 350px;
+  height: 25px;
+  background: var(--grey);
+  outline: none;
+  border-radius: 10px;
+}
+.slider:hover {
+  opacity: 1;
+}
+.slider::-webkit-slider-thumb {
+  padding: 2px;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 23px;
+  height: 23px;
+  background: var(--light-pineapple);
+  cursor: pointer;
+  border-radius: 10px;
+}
+
 @media only screen and (min-width: 768px) {
   .hero {
     width: 80vw;
@@ -363,7 +442,17 @@ h2 {
   .greeting {
     min-width: 120px;
   }
+  .about {
+    max-width: 70vw;
+    min-height: 16em;
+    margin: 2em auto 0;
+    color: var(--cream);
+  }
+  .text-me {
+    padding: 30px;
+  }
 }
+
 @media only screen and (max-width: 1320px) {
   .header {
     pad: 0 50px;
