--- a/style.css
+++ b/style.css
@@ -363,30 +363,26 @@ h2 {
   color: var(--grey);
   display: grid;
   grid-template-columns: 1fr;
+  background-color: var(--cream);
+  border-radius: 15px;
+  padding: 20px;
 }
 #description {
   grid-column: 1 / span 1;
   grid-row: 1 / span 1;
 }
-.img1 {
+#img1 {
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
   opacity: 1;
-  width: 320px;
-  overflow: hidden;
-  align-self: center;
-  justify-self: center;
-  border: 3px solid var(--grey);
-  border-radius: 15px;
-  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
-    0 17px 17px 0 rgba(0, 0, 0, 0.15);
-  margin: 2em auto;
 }
-.img2 {
+#img2 {
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
   opacity: 0;
-  width: 320px;
+}
+.img {
+  width: 300px;
   overflow: hidden;
   align-self: center;
   justify-self: center;
@@ -396,6 +392,7 @@ h2 {
     0 17px 17px 0 rgba(0, 0, 0, 0.15);
   margin: 2em auto;
 }
+
 .slide-div {
   grid-column: 1 / span 1;
   grid-row: 3 / span 1;
@@ -405,8 +402,7 @@ h2 {
 .slider {
   appearance: none;
   margin: auto;
-  width: 350px;
-  height: 25px;
+  width: 300px;
   background: var(--grey);
   outline: none;
   border-radius: 10px;
@@ -451,8 +447,16 @@ h2 {
   .text-me {
     padding: 30px;
   }
+  .london-images {
+    width: 50vw;
+  }
+  .slider {
+    width: 550px;
+  }
+  .img {
+    width: 450px;
+  }
 }
-
 @media only screen and (max-width: 1320px) {
   .header {
     pad: 0 50px;
