--- a/style.css
+++ b/style.css
@@ -363,8 +363,7 @@ h2 {
   color: var(--grey);
   display: grid;
   grid-template-columns: 1fr;
-  background-color: var(--cream);
-  border-radius: 15px;
+  background-color: var(--light-pineapple);
   padding: 20px;
 }
 #description {
@@ -382,7 +381,8 @@ h2 {
   opacity: 0;
 }
 .img {
-  width: 300px;
+  width: 280px;
+  max-width: 80vw;
   overflow: hidden;
   align-self: center;
   justify-self: center;
@@ -394,6 +394,8 @@ h2 {
 }
 
 .slide-div {
+  width: 280px;
+  max-width: 80vw;
   grid-column: 1 / span 1;
   grid-row: 3 / span 1;
   align-self: center;
@@ -402,7 +404,7 @@ h2 {
 .slider {
   appearance: none;
   margin: auto;
-  width: 300px;
+  width: 100%;
   background: var(--grey);
   outline: none;
   border-radius: 10px;
@@ -416,11 +418,62 @@ h2 {
   appearance: none;
   width: 23px;
   height: 23px;
-  background: var(--light-pineapple);
+  background: var(--pineapple);
   cursor: pointer;
   border-radius: 10px;
 }
+/* projects */
+.myProjects {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
 
+.myProjects img {
+  width: 100%;
+}
+
+.myProjects .item {
+  position: relative;
+  overflow: hidden;
+}
+
+.myProjects .item img {
+  vertical-align: middle;
+}
+.projects-div {
+  width: 90vw;
+  padding: 20px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-self: center;
+  background-color: var(--light-pineapple);
+  color: var(--pineapple);
+}
+.myProjects .caption {
+  cursor: pointer;
+  margin: 0;
+  padding: 1em;
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  max-height: 100%;
+  overflow: auto;
+  font-weight: bold;
+  transition: transform 0.5s;
+  transform: translateY(100%);
+  background: var(--grey);
+  /* background: rgba(30, 4, 65, 0.5); */
+  color: white;
+}
+
+.myProjects .item:hover .caption {
+  transform: translateY(0%);
+}
 @media only screen and (min-width: 768px) {
   .hero {
     width: 80vw;
@@ -457,6 +510,8 @@ h2 {
     width: 450px;
   }
 }
+/* projects */
+
 @media only screen and (max-width: 1320px) {
   .header {
     pad: 0 50px;
