Correct broken image link in readme

--- a/style.css
+++ b/style.css
@@ -242,7 +242,9 @@ header {
 .upload_img {
   margin-top: 15px;
   width: fit-content;
+  cursor: pointer;
 }
+
 .play-pause {
   display: flex;
   width: 200px;
